--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>7.20.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.24.3</version>
+        </dependency>
     </dependencies>
     
 </project>
